# kishanthan100-fullstack-enterprise-platform

./: .gitignore  README.md  docker-compose.yml
f_d_m_p/: .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini
f_d_m_p/alembic/: env.py
f_d_m_p/alembic/versions/: 4c16cd0948b1_added_updated_at_column_in_stock_table.py  5d8c322ba0da_added_customer_table_and_column_country_.py  d739659cb93b_added_created_data_column_in_customer_.py
f_d_m_p/app/: main.py
f_d_m_p/app/api/endpoints/: auth_route.py
f_d_m_p/app/api/endpoints/customers/: customer_route.py
f_d_m_p/app/api/endpoints/items/: items_route.py
f_d_m_p/app/api/endpoints/stocks/: stock_route.py
f_d_m_p/app/api/endpoints/user/: user_route.py  utils.py
f_d_m_p/app/core/: config.py  security.py
f_d_m_p/app/db/: mongodb.py  postgres.py  redis.py
f_d_m_p/app/models/: postgres.py
f_d_m_p/app/repositories/mongodb/: user_repository.py
f_d_m_p/app/repositories/postgres/: customer_repository.py  item_repositories.py  stock_repositories.py  user_repositories.py
f_d_m_p/app/repositories/redis/: item_cache_repository.py
f_d_m_p/app/schemas/: create_item.py  customer_schema.py  user_add.py  user_login.py
f_d_m_p/app/services/mongodb/: user_login_services.py
f_d_m_p/app/services/postgres/: customer_service.py  item_service.py  stock_service.py  user_service.py
f_d_m_p/app/tests/: conftest.py
f_d_m_p/app/tests/integration/: test_auth_api.py
f_d_m_p/app/tests/unit/: test_auth_service.py
frontend/: .gitignore  README.md  nginx.conf  package-lock.json  vite.config.js
(+40 files in other folders)
